--- a/app/src/main/res/drawable/bg_spinner_fruit.xml
+++ b/app/src/main/res/drawable/bg_spinner_fruit.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/colorAccent"/>
+                    <solid android:color="#FFA000"/>
                     <padding android:right="12dp"
                         android:left="12dp"/>
                     <corners android:radius="4dp"/>
@@ -14,7 +14,7 @@
             </item>
 
             <item
-                android:drawable="@drawable/ic_arrow_up"
+                android:drawable="@drawable/ic_arrow_down"
                 android:gravity="end"/>
 
         </layer-list>
