--- a/app/src/main/res/drawable/bg_spinner_fruit_up.xml
+++ b/app/src/main/res/drawable/bg_spinner_fruit_up.xml
@@ -14,7 +14,7 @@
             </item>
 
             <item
-                android:drawable="@drawable/ic_arrow_down"
+                android:drawable="@drawable/ic_arrow_up"
                 android:gravity="end"/>
 
         </layer-list>
