--- a/app/src/main/res/layout/item_fruit.xml
+++ b/app/src/main/res/layout/item_fruit.xml
@@ -5,18 +5,19 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/orange"
-        android:layout_marginStart="8dp"/>
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/orange" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:layout_toRightOf="@+id/image"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginStart="8dp"
+        android:layout_toRightOf="@+id/image"
+        android:text="Name"
+        android:textSize="20sp" />
 
 </RelativeLayout>
